SBR just_seeked